# BallStick

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ballnstick  clean.sh  cmake_install.cmake  game  game_ga  mouse
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.mpc.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
benchmarks/: 4641ththth.h5  4641ththth2.h5  datasetB.txt
datasets/: dataset.txt  dataset_new.txt
include/: CSocketServer.h  game.h
scripts/: ballstick.py  ballstick_ga.py  ballstick_trainer.py  ballstick_trainer_dt.py  ballstick_trainer_lir.py  ballstick_trainer_lor.py  ballstick_trainer_svm.py  ga.py  read_mdel.py
src/: CSocketServer.cpp  ballnstick.cpp  game.cpp  play_game.cpp  play_game_ga.cpp  x11_test.cpp
weights/: ballstick.h5  ballstick_dt.h5  ballstick_ga20.h5  ballstick_ga_first.h5  ballstick_lir.h5  ballstick_new.h5  ballstick_svm.h5
